@@ -1,5 +1,7 @@
 NOCC 1.3    ?? ??, 200?
 
+    * Add mail controls (delete, select all, etc.) to the bottom of the INBOX
+      page (Arnaud Boudou).
     * Bug #1524044 :  SMTP Auth Failures mishandled (Arnaud Boudou).
     * Improve remote pictures handling (Arnaud Boudou).
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
